opam-version: "2.0"
maintainer: "zandoye@gmail.com"
authors: [ "ZAN DoYe" ]
homepage: "https://github.com/kandu/mew"
bug-reports: "https://github.com/kandu/mew/issues"
license: "MIT"
dev-repo: "https://github.com/kandu/mew.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test & (ocaml:version >= "4.04.0")}
]
depends: [
  "ocaml" {>= "4.03.0"}
  "result"
  "dune" {build}
  "ppx_expect" {with-test}
]

synopsis: ""
description: """
"""
